apps/base/hive/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: hive 
spec:
  selector:
    matchLabels:
      app: hive
  template:
    metadata:
      labels:
        app: hive 
    spec:
      containers:
        - name: hive
          image: ghcr.io/abecker7/hivebox/abecker7/hive-docker:0.2.6
          imagePullPolicy: IfNotPresent
          ports: 
            - name: hive
              containerPort: 5050
              protocol: TCP
