apps/base/hive/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: hive

spec:
  ports:
    - name: hive
      port: 5050
      targetPort: hive

  selector:
    app: traefik
