apps/base/hive/services.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-hive-service

spec:
  ports:
    - name: hive
      port: 5050
      targetPort: hive 

  selector:
    app: traefik
